--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.1.1",
     "axios": "^0.27.2",
     "css.gg": "^2.0.0",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
@@ -15,6 +16,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sanitize-html": "^2.7.0",
     "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
